docs: update links in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -870,7 +870,7 @@ are worth accelerating for real-time applications.
 
 In this FFI example, we create a binary FSK (BFSK/2FSK) modulator block by
 wrapping the FSK modulator in the digital signal processing library
-[liquid-dsp](https://github.com/jgaeddert/liquid-dsp/). This example
+[liquid-dsp](https://github.com/jgaeddert/liquid-dsp). This example
 demonstrates adding new functionality to LuaRadio by wrapping an external
 library with the LuaJIT FFI.
 
@@ -1387,11 +1387,11 @@ Samples from LuaRadio can be dumped to a file with the
 [`IQFileSink`](0.reference-manual.md#iqfilesink), or
 [`RealFileSink`](0.reference-manual.md#realfilesink), and imported into Python
 for inspection with the
-[`numpy.fromfile()`](http://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.fromfile.html)
+[`numpy.fromfile()`](https://docs.scipy.org/doc/numpy-1.17.0/reference/generated/numpy.fromfile.html)
 function. The `numpy.float32` type is compatible with LuaRadio's `Float32`
 type, and the `numpy.complex64` type is compatible with LuaRadio's
 `ComplexFloat32` type. The reverse is also possible with numpy ndarray's
-[`.tofile()`](http://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.ndarray.tofile.html#numpy.ndarray.tofile)
+[`.tofile()`](https://docs.scipy.org/doc/numpy-1.17.0/reference/generated/numpy.ndarray.tofile.html#numpy.ndarray.tofile)
 method, and the [`RawFileSource`](0.reference-manual.md#rawfilesink),
 [`IQFileSource`](0.reference-manual.md#iqfilesource), or
 [`RealFileSource`](0.reference-manual.md#realfilesource) blocks.
