docs: update airspy and sdrplay library links in supported hardware

--- a/docs/7.supported-hardware.md
+++ b/docs/7.supported-hardware.md
@@ -9,9 +9,9 @@ high speed interfaces.
 
 * [SoapySDR](https://github.com/pothosware/SoapySDR/wiki) with [`SoapySDRSource`](0.reference-manual.md#soapysdrsource) via [libSoapySDR](https://github.com/pothosware/SoapySDR)
 * [RTL-SDR](http://www.rtl-sdr.com/about-rtl-sdr/) with [`RtlSdrSource`](0.reference-manual.md#rtlsdrsource) via [librtlsdr](http://sdr.osmocom.org/trac/wiki/rtl-sdr)
-* [Airspy R2 and Mini](http://airspy.com/) with [`AirspySource`](0.reference-manual.md#airspysource) via [libairspy](https://github.com/airspy/host)
+* [Airspy R2 and Mini](http://airspy.com/) with [`AirspySource`](0.reference-manual.md#airspysource) via [libairspy](https://github.com/airspy/airspyone_host)
 * [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSource`](0.reference-manual.md#hackrfsource) via [libhackrf](https://github.com/mossmann/hackrf)
-* [SDRplay RSP](http://sdrplay.com/) with [`SDRplaySource`](0.reference-manual.md#sdrplaysource) via [libmirsdrapi-rsp](http://sdrplay.com/linux.html)
+* [SDRplay RSP](http://sdrplay.com/) with [`SDRplaySource`](0.reference-manual.md#sdrplaysource) via [libmirsdrapi-rsp](https://www.sdrplay.com/downloads/)
 * [USRP](https://www.ettus.com/) with [`UHDSource`](0.reference-manual.md#uhdsource) via [libuhd](https://github.com/EttusResearch/uhd)
 
 ### Sinks
