docs: add repl install instructions to development tips in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -1319,6 +1319,51 @@ It supports table dumping, pretty printing, tab completion, and line history.
 
 Another alternative is [lua-repl](https://github.com/hoelzro/lua-repl).
 
+##### trepl
+
+Install trepl with:
+
+```
+sudo luarocks --lua-version=5.1 --server=https://luarocks.org/dev install trepl-torchless
+```
+
+Add a Lua path modification to allow local loading of the `radio` package, and
+an alias to run trepl under LuaJIT:
+
+```
+export LUA_PATH="./?/init.lua;;"
+alias th='luajit /usr/lib/luarocks/rocks-5.1/trepl-torchless/scm-1/bin/th'
+```
+
+Start the REPL with:
+
+```
+th
+```
+
+##### lua-repl
+
+Install linenoise and lua-repl with:
+
+```
+sudo luarocks --lua-version=5.1 install linenoise
+sudo luarocks --lua-version=5.1 install luarepl
+```
+
+Add a Lua path modification to allow local loading of the `radio` package, and
+an alias to run lua-repl under LuaJIT:
+
+```
+export LUA_PATH="./?/init.lua;;"
+alias lua-repl='luajit /usr/lib/luarocks/rocks-5.1/luarepl/0.9-1/bin/rep.lua'
+```
+
+Start the REPL with:
+
+```
+lua-repl
+```
+
 #### Prototyping
 
 For some blocks, it may be more productive to prototype signal processing
