--- a/docs/6.comparison-gnuradio.md
+++ b/docs/6.comparison-gnuradio.md
@@ -27,9 +27,9 @@ block development.
 
 GNU Radio tends to have a large size footprint. A typical binary GNU Radio
 installation weighs in at over 100 MB. When the installation includes
-development support, the [boost](http://www.boost.org/) development headers and
-numerous other libraries and tools (gsl, blas, swig, orc, etc.) can add another
-100 MB or more.
+development support, the [boost](https://www.boost.org/) development headers
+and numerous other libraries and tools (gsl, blas, swig, orc, etc.) can add
+another 100 MB or more.
 
 GNU Radio also has a large compilation footprint, in terms of time and
 dependencies. Compilation of the GNU Radio framework and its modules is
@@ -59,11 +59,9 @@ LuaRadio is licensed MIT, a more permissive license.
 GNU Radio blocks are typically written in C++, and tend to have a lot of
 boilerplate for building, Python binding, graphical editor binding, and
 testing. This is mitigated with tooling, i.e. the `gr_modtool`, but to some,
-this may contribute to the opaqueness of the framework. See the GNU Radio
-[Out-of-tree Modules
-guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/OutOfTreeModules) and
-[Blocks Coding
-guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/BlocksCodingGuide)
+this may contribute to the opaqueness of the framework. See the [Working with
+GNU Radio in C++
+tutorial](https://wiki.gnuradio.org/index.php/Guided_Tutorial_GNU_Radio_in_C%2B%2B)
 for examples of the block development flow and block skeletons.
 
 GNU Radio C++ blocks naturally require compilation before they can be used in a
@@ -74,7 +72,7 @@ despite being written in C++, to code generate support for multiple data types.
 C++ blocks are usually bound to Python with [SWIG](http://www.swig.org/), which
 generates usable, but unnatural bindings. Blocks can also be written in pure
 Python (see the [Working with GNU Radio in Python
-tutorial](http://gnuradio.org/redmine/projects/gnuradio/wiki/Guided_Tutorial_GNU_Radio_in_Python)),
+tutorial](https://wiki.gnuradio.org/index.php/Guided_Tutorial_GNU_Radio_in_Python)),
 and though they are limited in performance compared to C++ blocks, do provide
 an avenue for more rapid prototyping. Altogether, the uninitiated may still
 find GNU Radio block development shrouded in boilerplate and esoterica. For
@@ -84,10 +82,10 @@ third-party modules on [CGRAN](http://www.cgran.org/).
 GNU Radio does not support creating custom first-class data types for
 serialization between blocks, but blocks may exchange Protocol Data Units
 (PDUs) with [Tagged
-Streams](http://gnuradio.org/doc/doxygen/page_tagged_stream_blocks.html), which
-demarcate the boundaries of the structured data, or use asynchronous [Message
-Passing](http://gnuradio.org/doc/doxygen/page_msg_passing.html), which pass
-data out-of-band of flow graph streams.
+Streams](https://www.gnuradio.org/doc/doxygen/page_tagged_stream_blocks.html),
+which demarcate the boundaries of the structured data, or use asynchronous
+[Message Passing](https://www.gnuradio.org/doc/doxygen/page_msg_passing.html),
+which pass data out-of-band of flow graph streams.
 
 LuaRadio blocks are written in pure Lua, have substantially less boilerplate,
 and require no compilation or bindings. With LuaRadio, the convenience of
@@ -121,7 +119,8 @@ problem of block type differentiation to the users. GNU Radio has developed a
 rich nomenclature for annotating their block names with their type signature,
 using obscure suffixes like `_cc` and `_ff`, e.g. `multiply_cc`, `multiply_ff`,
 `fir_filter_ccc`, `fir_filter_ccf`, `fir_filter_fff` — scroll through the [GNU
-Radio Sphinx documentation](http://gnuradio.org/doc/sphinx/) for more examples.
+Radio Sphinx documentation](https://www.gnuradio.org/doc/sphinx-v3.7.9.2/) for
+more examples.
 
 On the other hand, LuaRadio blocks can support multiple type signatures. For
 example, the [`MultiplyBlock`](0.reference-manual.md#multiplyblock) and
@@ -167,7 +166,7 @@ While LuaRadio performance is more than adequate for real-time SDR projects,
 GNU Radio still performs better than LuaRadio overall. If performance is your
 priority, then you should use GNU Radio.
 
-See the [Benchmarks](http://luaradio.io/benchmarks.html) page for empirical
+See the [Benchmarks](https://luaradio.io/benchmarks.html) page for empirical
 benchmarks on both LuaRadio and GNU Radio across several platforms.
 
 Future infrastructure improvements and additional library acceleration will
