docs: regenerate reference manual for v0.6.0

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.5.1`.
+Generated from LuaRadio `v0.6.0`.
 
 ## Table of contents
 
@@ -15,6 +15,9 @@ Generated from LuaRadio `v0.5.1`.
         * [AirspySource](#airspysource)
         * [HackRFSource](#hackrfsource)
         * [IQFileSource](#iqfilesource)
+        * [JSONSource](#jsonsource)
+        * [NetworkClientSource](#networkclientsource)
+        * [NetworkServerSource](#networkserversource)
         * [PulseAudioSource](#pulseaudiosource)
         * [RawFileSource](#rawfilesource)
         * [RealFileSource](#realfilesource)
@@ -35,6 +38,8 @@ Generated from LuaRadio `v0.5.1`.
         * [HackRFSink](#hackrfsink)
         * [IQFileSink](#iqfilesink)
         * [JSONSink](#jsonsink)
+        * [NetworkClientSink](#networkclientsink)
+        * [NetworkServerSink](#networkserversink)
         * [NopSink](#nopsink)
         * [PortAudioSink](#portaudiosink)
         * [PrintSink](#printsink)
@@ -513,7 +518,7 @@ component.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `format` (*string*): File format specifying signedness, bit width, and
                        endianness of samples. Choice of "s8", "u8", "u16le",
                        "u16be", "s16le", "s16be", "u32le", "u32be", "s32le",
@@ -536,6 +541,153 @@ local src = radio.IQFileSource('samples.f32le.iq', 'f32le', 1e6, true)
 
 -- Source little-endian signed 16-bit IQ samples from stdin sampled at 500 kHz
 local src = radio.IQFileSource(io.stdin, 's16le', 500e3)
+```
+
+--------------------------------------------------------------------------------
+
+#### JSONSource
+
+Source a signal from a JSON file. Samples are deserialized from individual,
+newline delimited objects. This source supports any data type that
+implements `from_json()`.
+
+##### `radio.JSONSource(file, data_type, rate[, repeat_on_eof=false])`
+
+###### Arguments
+
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
+* `data_type` (*type*): LuaRadio data type that implements `from_json()`
+* `rate` (*number*): Sample rate of file
+* `repeat_on_eof` (*bool*): Repeat on end of file
+
+###### Type Signatures
+
+* ❑➔ `out` *data_type*
+
+###### Example
+
+``` lua
+-- Source AX25FrameType samples sampled at 1 Hz from a file descriptor
+local src = radio.JSONSource(3, radio.AX25FramerBlock.AX25FrameType, 1)
+
+-- Source AX25FrameType samples sampled at 1 Hz from a file, repeating on EOF
+local src = radio.JSONSource('data.bin', radio.AX25FramerBlock.AX25FrameType, 1, true)
+```
+
+--------------------------------------------------------------------------------
+
+#### NetworkClientSource
+
+Source a signal from a network client. The source supports TCP and UNIX
+socket transports. The samples are deserialized according to the specified
+signedness, bit width, and endianness format.  Complex-valued signals are
+deinterleaved as real component followed by imaginary component.  C
+structure types may be deserialized raw with the "raw" format. Object types
+may be deserialized from newline delimited JSON with the "json" format.
+The source can be configured to automatically reconnect (default) or
+terminate on connection loss.
+
+##### `radio.NetworkClientSource(data_type, rate, format, transport, address[, options={}])`
+
+###### Arguments
+
+* `data_type` (*string*): LuaRadio data type
+* `rate` (*number*): Sample rate of data
+* `format` (*string*): Binary format of the samples specifying signedness,
+                       bit width, and endianness of samples, or "raw" (for
+                       raw serialization, useful for C structure types), or
+                       "json" (for JSON serialization, useful for Object
+                       types). Choice of "s8", "u8", "u16le", "u16be",
+                       "s16le", "s16be", "u32le", "u32be", "s32le", "s32be",
+                       "f32le", "f32be", "f64le", "f64be", "raw", "json".
+* `transport` (*string*): Transport type. Choice of "tcp" or "unix".
+* `address` (*string*): Address, as host:port for TCP, or as a file path for
+                        UNIX.
+* `options` (*table*): Additional options, specifying:
+    * `reconnect` (bool, default true, reconnect on
+      connection loss)
+
+###### Type Signatures
+
+* ❑➔ `out` *data_type*
+
+###### Example
+
+``` lua
+-- Source ComplexFloat32 samples sampled at 1 MHz decoded from little-endian
+-- 32-bit float format from a TCP client connected to 192.168.1.105:5000
+local src = radio.NetworkClientSource(radio.types.ComplexFloat32, 1e6, 'f32le', 'tcp', '192.168.1.105:5000')
+
+-- Source Float32 samples sampled at 100 kHz decoded from little-endian
+-- signed 16-bit real format from a UNIX socket client connected to
+-- /tmp/radio.sock
+local src = radio.NetworkClientSource(radio.types.Float32, 100e3, 's16le', 'unix', '/tmp/radio.sock')
+
+-- Source RDSFrameType samples decoded from their C structure from a TCP
+-- client connected to 192.168.1.105:5000
+local src = radio.NetworkClientSource(radio.RDSFramerBlock.RDSFrameType, 0, 'raw', 'tcp', '192.168.1.105:5000')
+
+-- Source RDSPacketType samples decoded from their JSON format from a TCP
+-- client connected to 192.168.1.105:5000
+local src = radio.NetworkClientSource(radio.RDSDecoderBlock.RDSPacketType, 0, 'json', 'tcp', '192.168.1.105:5000')
+```
+
+--------------------------------------------------------------------------------
+
+#### NetworkServerSource
+
+Source a signal from a network server. The source supports TCP and UNIX
+socket transports. The samples are deserialized according to the specified
+signedness, bit width, and endianness format.  Complex-valued signals are
+deinterleaved as real component followed by imaginary component.  C
+structure types may be deserialized raw with the "raw" format. Object types
+may be deserialized from newline delimited JSON with the "json" format.
+The source can be configured to automatically reconnect (default) or
+terminate on connection loss.
+
+##### `radio.NetworkServerSource(data_type, rate, format, transport, address[, options={}])`
+
+###### Arguments
+
+* `data_type` (*string*): LuaRadio data type
+* `rate` (*number*): Sample rate of data
+* `format` (*string*): Binary format of the samples specifying signedness,
+                       bit width, and endianness of samples, or "raw" (for
+                       raw serialization, useful for C structure types), or
+                       "json" (for JSON serialization, useful for Object
+                       types). Choice of "s8", "u8", "u16le", "u16be",
+                       "s16le", "s16be", "u32le", "u32be", "s32le", "s32be",
+                       "f32le", "f32be", "f64le", "f64be", "raw", "json".
+* `transport` (*string*): Transport type. Choice of "tcp" or "unix".
+* `address` (*string*): Address, as host:port for TCP, or as a file path for
+                        UNIX.
+* `options` (*table*): Additional options, specifying:
+    * `reconnect` (bool, default true, reconnect on
+      connection loss)
+
+###### Type Signatures
+
+* ❑➔ `out` *data_type*
+
+###### Example
+
+``` lua
+-- Source ComplexFloat32 samples sampled at 1 MHz decoded from little-endian
+-- 32-bit float format from a TCP server listening on 0.0.0.0:5000
+local src = radio.NetworkServerSource(radio.types.ComplexFloat32, 1e6, 'f32le', 'tcp', '0.0.0.0:5000')
+
+-- Source Float32 samples sampled at 100 kHz decoded from little-endian
+-- signed 16-bit real format from a UNIX socket server listening on
+-- /tmp/radio.sock
+local src = radio.NetworkServerSource(radio.types.Float32, 100e3, 's16le', 'unix', '/tmp/radio.sock')
+
+-- Source RDSFrameType samples decoded from their C structure from a TCP
+-- server listening on 0.0.0.0:5000
+local src = radio.NetworkServerSource(radio.RDSFramerBlock.RDSFrameType, 0, 'raw', 'tcp', '0.0.0.0:5000')
+
+-- Source RDSPacketType samples decoded from their JSON format from a TCP
+-- server listening on 0.0.0.0:5000
+local src = radio.NetworkServerSource(radio.RDSDecoderBlock.RDSPacketType, 0, 'json', 'tcp', '0.0.0.0:5000')
 ```
 
 --------------------------------------------------------------------------------
@@ -585,7 +737,7 @@ serializing data types across a pipe or other file descriptor based IPC.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `data_type` (*type*): LuaRadio data type
 * `rate` (*number*): Sample rate of file
 * `repeat_on_eof` (*bool*): Repeat on end of file
@@ -617,7 +769,7 @@ endianness. This is the real-valued counterpart of
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `format` (*string*): File format specifying signedness, bit width, and
                        endianness of samples. Choice of "s8", "u8", "u16le",
                        "u16be", "s16le", "s16be", "u32le", "u32be", "s32le",
@@ -731,7 +883,7 @@ other waveform types generate a real-valued signal.
 * `signal` (*string*): Waveform type, either "exponential", "cosine", "sine",
                        "square", "triangle", "sawtooth", "constant".
 * `frequency` (*number*): Frequency in Hz
-* `rate` (*number|nil*): Sample rate in Hz
+* `rate` (*number*\|*nil*): Sample rate in Hz
 * `options` (*table*): Additional options, specifying:
     * `amplitude` (number, default 1.0)
     * `offset` (number, default 0.0)
@@ -766,7 +918,7 @@ Source a complex-valued signal from a SoapySDR device. This source requires
 
 ###### Arguments
 
-* `driver` (*string|table*): Driver string or key-value table
+* `driver` (*string*\|*table*): Driver string or key-value table
 * `frequency` (*number*): Tuning frequency in Hz
 * `rate` (*number*): Sample rate in Hz
 * `options` (*table*): Additional options, specifying:
@@ -895,7 +1047,7 @@ integer.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `num_channels` (*int*): Number of channels (e.g. 1 for mono, 2 for stereo, etc.)
 * `repeat_on_eof` (*bool*): Repeat on end of file
 
@@ -968,7 +1120,7 @@ Report the average rate of samples delivered to the sink.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `use_json` (*bool*): Serialize aggregate results in JSON on termination
 
 ###### Type Signatures
@@ -1211,7 +1363,7 @@ component.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `format` (*string*): File format specifying signedness, bit width, and
                        endianness of samples. Choice of "s8", "u8", "u16le",
                        "u16be", "s16le", "s16be", "u32le", "u32be", "s32le",
@@ -1246,7 +1398,7 @@ implements `to_json()`.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 
 ###### Type Signatures
 
@@ -1262,6 +1414,116 @@ top:connect(src, snk)
 -- Sink JSON serialized samples to a file
 local snk = radio.JSONSink('out.json')
 top:connect(src, snk)
+```
+
+--------------------------------------------------------------------------------
+
+#### NetworkClientSink
+
+Sink a signal to a network client. The sink supports TCP and UNIX socket
+transports. The samples are serialized according to the specified
+signedness, bit width, and endianness format.  Complex-valued signals are
+interleaved as real component followed by imaginary component.  C structure
+types are serialized raw with the "raw" format. Object types are serialized
+as newline delimited JSON with the "json" format. The sink will
+automatically reconnect on connection loss.
+
+##### `radio.NetworkClientSink(format, transport, address[, options={}])`
+
+###### Arguments
+
+* `format` (*string*): Binary format of the samples specifying signedness,
+                       bit width, and endianness of samples, or "raw" (for
+                       raw serialization, useful for C structure types), or
+                       "json" (for JSON serialization, useful for Object
+                       types). Choice of "s8", "u8", "u16le", "u16be",
+                       "s16le", "s16be", "u32le", "u32be", "s32le", "s32be",
+                       "f32le", "f32be", "f64le", "f64be", "raw", "json".
+* `transport` (*string*): Transport type. Choice of "tcp" or "unix".
+* `address` (*string*): Address, as host:port for TCP, or as a file path for
+                        UNIX.
+* `options` (*table*): Additional options, specifying:
+    * `backpressure` (bool, default false, backpressure
+      samples on connection loss)
+
+###### Type Signatures
+
+* `in` *ComplexFloat32* ➔❑
+* `in` *Float32* ➔❑
+* `in` *supported* ➔❑
+
+###### Example
+
+``` lua
+-- Sink ComplexFloat32 samples encoded as little-endian 32-bit float IQ to a
+-- TCP client connected to 192.168.1.105:5000
+local snk = radio.NetworkClientSink('f32le', 'tcp', '192.168.1.105:5000')
+
+-- Sink Float32 samples encoded as little-endian 16-bit real to a UNIX
+-- socket client connected to /tmp/radio.sock
+local snk = radio.NetworkClientSink('s16le', 'unix', '/tmp/radio.sock')
+
+-- Sink C structure type samples to a TCP client connected to
+-- 192.168.1.105:5000
+local snk = radio.NetworkClientSink('raw', 'tcp', '192.168.1.105:5000')
+
+-- Sink a JSON serialized objects to a TCP client connected to
+-- 192.168.1.105:5000
+local snk = radio.NetworkClientSink('json', 'tcp', '192.168.1.105:5000')
+```
+
+--------------------------------------------------------------------------------
+
+#### NetworkServerSink
+
+Sink a signal to a network server. The sink supports TCP and UNIX socket
+transports. The samples are serialized according to the specified
+signedness, bit width, and endianness format.  Complex-valued signals are
+interleaved as real component followed by imaginary component.  C structure
+types are serialized raw with the "raw" format. Object types are serialized
+as newline delimited JSON with the "json" format. The sink will
+automatically reconnect on connection loss.
+
+##### `radio.NetworkServerSink(format, transport, address[, options={}])`
+
+###### Arguments
+
+* `format` (*string*): Binary format of the samples specifying signedness,
+                       bit width, and endianness of samples, or "raw" (for
+                       raw serialization, useful for C structure types), or
+                       "json" (for JSON serialization, useful for Object
+                       types). Choice of "s8", "u8", "u16le", "u16be",
+                       "s16le", "s16be", "u32le", "u32be", "s32le", "s32be",
+                       "f32le", "f32be", "f64le", "f64be", "raw", "json".
+* `transport` (*string*): Transport type. Choice of "tcp" or "unix".
+* `address` (*string*): Address, as host:port for TCP, or as a file path for
+                        UNIX.
+* `options` (*table*): Additional options, specifying:
+    * `backpressure` (bool, default false, backpressure
+      samples on connection loss)
+
+###### Type Signatures
+
+* `in` *ComplexFloat32* ➔❑
+* `in` *Float32* ➔❑
+* `in` *supported* ➔❑
+
+###### Example
+
+``` lua
+-- Sink ComplexFloat32 samples encoded as little-endian 32-bit float IQ to a
+-- TCP server listening on 0.0.0.0:5000
+local snk = radio.NetworkServerSink('f32le', 'tcp', '0.0.0.0:5000')
+
+-- Sink Float32 samples encoded as little-endian 16-bit real to a UNIX
+-- socket server listening on /tmp/radio.sock
+local snk = radio.NetworkServerSink('s16le', 'unix', '/tmp/radio.sock')
+
+-- Sink C structure type samples to a TCP server listening on 0.0.0.0:5000
+local snk = radio.NetworkServerSink('raw', 'tcp', '0.0.0.0:5000')
+
+-- Sink JSON serialized objects to a TCP server listening on 0.0.0.0:5000
+local snk = radio.NetworkServerSink('json', 'tcp', '0.0.0.0:5000')
 ```
 
 --------------------------------------------------------------------------------
@@ -1326,7 +1588,7 @@ implements `__tostring()`.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 
 ###### Type Signatures
 
@@ -1384,7 +1646,7 @@ across a pipe or other file descriptor based IPC.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 
 ###### Type Signatures
 
@@ -1415,7 +1677,7 @@ endianness. This is the real-valued counterpart of
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `format` (*string*): File format specifying signedness, bit width, and
                        endianness of samples. Choice of "s8", "u8", "u16le",
                        "u16be", "s16le", "s16be", "u32le", "u32be", "s32le",
@@ -1449,7 +1711,7 @@ Sink a complex-valued signal to a SoapySDR device. This sink requires
 
 ###### Arguments
 
-* `driver` (*string|table*): Driver string or key-value table
+* `driver` (*string*\|*table*): Driver string or key-value table
 * `frequency` (*number*): Tuning frequency in Hz
 * `options` (*table*): Additional options, specifying:
     * `channel` (int, default 0)
@@ -1521,7 +1783,7 @@ integer.
 
 ###### Arguments
 
-* `file` (*string|file|int*): Filename, file object, or file descriptor
+* `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `num_channels` (*int*): Number of channels (e.g. 1 for mono, 2 for stereo, etc.)
 * `bits_per_sample` (*int*): Bits per sample, choice of 8, 16, or 32
 
@@ -1690,7 +1952,7 @@ $$ y[n] = b_0 x[n] + b_1 x[n-1] + ... + b_N x[n-N] $$
 
 ###### Arguments
 
-* `taps` (*array|vector*): Real-valued taps specified with a number array or
+* `taps` (*array*\|*vector*): Real-valued taps specified with a number array or
                            a Float32 vector, or complex-valued taps specified
                            with a ComplexFloat32 vector
 * `use_fft` (*bool*): Use FFT overlap-save convolution. Defaults to true
@@ -1816,9 +2078,9 @@ $$ \begin{align} y[n] = &\frac{1}{a_0}(b_0 x[n] + b_1 x[n-1] + ... + b_N x[n-N] 
 
 ###### Arguments
 
-* `b_taps` (*array|vector*): Real-valued feedforward taps specified with a
+* `b_taps` (*array*\|*vector*): Real-valued feedforward taps specified with a
                              number array or a Float32 vector
-* `a_taps` (*array|vector*): Real-valued feedback taps specified with a
+* `a_taps` (*array*\|*vector*): Real-valued feedback taps specified with a
                              number array or a Float32 vector, must be at
                              least length 1
 
@@ -2022,7 +2284,7 @@ $$ y[n] = x[n] + C $$
 
 ###### Arguments
 
-* `constant` (*number|Float32|ComplexFloat32*): Constant
+* `constant` (*number*\|*Float32*\|*ComplexFloat32*): Constant
 
 ###### Type Signatures
 
@@ -2167,7 +2429,7 @@ $$ y[n] = C \; x[n] $$
 
 ###### Arguments
 
-* `constant` (*number|Float32|ComplexFloat32*): Constant
+* `constant` (*number*\|*Float32*\|*ComplexFloat32*): Constant
 
 ###### Type Signatures
 
@@ -4343,7 +4605,7 @@ serializable between blocks in a flow graph.
 
 ###### Arguments
 
-* `ctype` (*string|ctype*): C type
+* `ctype` (*string*\|*ctype*): C type
 * `methods` (*table*): Table of methods and metamethods
 
 ###### Returns
@@ -4605,7 +4867,7 @@ input port.
 ###### Arguments
 
 * `name` (*string*): Name
-* `data_type` (*type|function*): Data type, e.g. `radio.types.ComplexFloat32`, or a function predicate
+* `data_type` (*type*\|*function*): Data type, e.g. `radio.types.ComplexFloat32`, or a function predicate
 
 ###### Example
 
@@ -4879,6 +5141,24 @@ Platform constants.
 ##### `radio.platform.features.fftw3f`
 
 *bool*: FFTW3F library found and enabled.
+
+--------------------------------------------------------------------------------
+
+##### `radio.platform.versions.liquid`
+
+*string*: Liquid-dsp library version.
+
+--------------------------------------------------------------------------------
+
+##### `radio.platform.versions.volk`
+
+*string*: VOLK library version.
+
+--------------------------------------------------------------------------------
+
+##### `radio.platform.versions.fftw3f`
+
+*string*: FFTW3F library version.
 
 --------------------------------------------------------------------------------
 
