docs: update arch linux liquid-dsp package in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -81,7 +81,7 @@ applications, the [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
 libraries are strongly encouraged for appreciable performance. VOLK depends on
 boost.
 
-* Arch Linux: `fftw`, `liquid-dsp-git` (AUR) or `libvolk`
+* Arch Linux: `fftw`, `liquid-dsp`, `libvolk`
 * Ubuntu/Debian: `fftw3`, `libfftw3-dev`, liquid-dsp or VOLK from source
 * Fedora, CentOS/RHEL/SL 7 or up: `fftw`, `fftw-devel`, liquid-dsp or VOLK from
   source
