--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -1,23 +1,29 @@
 # Installation
 
-LuaRadio can be installed from the AUR on Arch Linux, from a PPA on Ubuntu,
-from Homebrew on Mac OS X, or from source.
+LuaRadio can be installed from the AUR on Arch Linux, from Homebrew on Mac OS
+X, from a PPA on Ubuntu, or from source.
 
 Packaging for other distributions and platforms is a work in progress.
 
 To try LuaRadio without installation, you can run it [directly from the
 repository](../README.md#quickstart), provided LuaJIT is installed. The
-real-time dependencies described [below](#install-real-time-dependencies) will
-also be necessary for real-time applications.
+real-time dependencies described [below](#real-time-dependencies) will also be
+necessary for real-time applications.
 
-## Installing from Arch Linux AUR
+## Arch Linux AUR
 
 LuaRadio is available in the Arch Linux AUR under the package
 [`luaradio`](https://aur.archlinux.org/packages/luaradio).
 
-Desktop users should also install the `gnuplot` package for plotting support.
+## macOS Homebrew
 
-## Installing on Ubuntu 16.04, 14.04
+LuaRadio is available in [Homebrew](http://brew.sh/) for macOS / Mac OS X:
+
+```
+brew install luaradio
+```
+
+## Ubuntu 16.04, 14.04
 
 LuaRadio is available through a PPA for Ubuntu 16.04 (Xenial Xerus) and Ubuntu
 14.04 (Trusty Tahr), under amd64, i386, and armhf architectures.
@@ -34,35 +40,14 @@ liquid-dsp is not yet available in the PPA.  liquid-dsp or VOLK can be
 installed [from source](#install-real-time-dependencies). On Ubuntu 16.04, VOLK
 can be installed with the `libvolk1-dev` package.
 
-Desktop users should also install the `gnuplot5` or `gnuplot` package for
-plotting support.
+## Source
 
-## Installing from Homebrew on Mac OS X
-
-LuaRadio is available in [Homebrew](http://brew.sh/) for Mac OS X:
-
-```
-brew install luaradio
-```
-
-*Note*: Users should install liquid-dsp or VOLK for real-time acceleration.
-liquid-dsp is not yet available in Homebrew. liquid-dsp or VOLK can be
-installed [from source](#install-real-time-dependencies).
-
-Desktop users should also install the `gnuplot` package for plotting support.
-
-## Installing from Source
-
-### Install prerequisites
-
-Install LuaJIT 2.0.4 or greater:
+Install LuaJIT 2.0.4 or greater and prerequisites:
 
 * Arch Linux: `luajit`
+* macOS (Homebrew): `luajit`, `pkg-config`
 * Ubuntu/Debian: `luajit`, `libluajit-5.1-dev`,`pkg-config`
 * Fedora, CentOS/RHEL/SL 7 or up: `luajit`, `luajit-devel`
-* Mac OS X (Homebrew): `luajit`, `pkg-config`
-
-### Install LuaRadio
 
 Build and install LuaRadio:
 
@@ -73,7 +58,7 @@ make lib
 sudo make install
 ```
 
-### Install real-time dependencies
+### Real-time Dependencies
 
 LuaRadio has no hard dependencies outside of LuaJIT, but for real-time
 applications, the [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
@@ -81,21 +66,12 @@ applications, the [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
 libraries are strongly encouraged for appreciable performance. VOLK depends on
 boost.
 
-* Arch Linux: `fftw`, `liquid-dsp`, `libvolk`
-* Ubuntu/Debian: `fftw3`, `libfftw3-dev`, liquid-dsp or VOLK from source
-* Fedora, CentOS/RHEL/SL 7 or up: `fftw`, `fftw-devel`, liquid-dsp or VOLK from
-  source
-* Mac OS X (Homebrew): `fftw`, liquid-dsp or VOLK from source
-
-Run `sudo ldconfig` after library installation on Linux platforms, to update
-the shared library cache.
-
-### Install optional dependencies
+### Optional Dependencies
 
 Desktop users should also install the `gnuplot` package for plotting support.
 
-Some I/O blocks, like SDR and audio sources/sinks, may require additional
-external libraries.
+Some I/O blocks, like SDR and audio sources/sinks, may require external
+libraries. For example, the RTL-SDR requires the `librtlsdr` library.
 
 ### Check Installation
 
