docs: add MacPorts prerequisities to installation guide
for build from source instructions.

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -46,6 +46,7 @@ Install LuaJIT 2.0.4 or greater and prerequisites:
 
 * Arch Linux: `luajit`
 * macOS (Homebrew): `luajit`, `pkg-config`
+* macOS/Darwin (MacPorts): `luajit`, `pkgconfig`
 * Ubuntu/Debian: `luajit`, `libluajit-5.1-dev`,`pkg-config`
 * Fedora, CentOS/RHEL/SL 7 or up: `luajit`, `luajit-devel`
 
