docs: remove outdated ubuntu ppa from installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -1,7 +1,7 @@
 # Installation
 
 LuaRadio can be installed from the AUR on Arch Linux, from Homebrew on Mac OS
-X, from a PPA on Ubuntu, or from source.
+X, or from source.
 
 Packaging for other distributions and platforms is a work in progress.
 
@@ -22,23 +22,6 @@ LuaRadio is available in [Homebrew](http://brew.sh/) for macOS / Mac OS X:
 ```
 brew install luaradio
 ```
-
-## Ubuntu 16.04, 14.04
-
-LuaRadio is available through a PPA for Ubuntu 16.04 (Xenial Xerus) and Ubuntu
-14.04 (Trusty Tahr), under amd64, i386, and armhf architectures.
-
-```
-sudo apt-get install software-properties-common
-sudo add-apt-repository ppa:vsergeev/luaradio
-sudo apt-get update
-sudo apt-get install luaradio
-```
-
-*Note*: Users should install liquid-dsp or VOLK for real-time acceleration.
-liquid-dsp is not yet available in the PPA.  liquid-dsp or VOLK can be
-installed [from source](#install-real-time-dependencies). On Ubuntu 16.04, VOLK
-can be installed with the `libvolk1-dev` package.
 
 ## Source
 
