docs: simplify note about real-time dependencies in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -47,8 +47,7 @@ sudo make install
 LuaRadio has no hard dependencies outside of LuaJIT, but for real-time
 applications, the [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
 [VOLK](https://github.com/gnuradio/volk), and [fftw](http://www.fftw.org/)
-libraries are strongly encouraged for appreciable performance. VOLK depends on
-boost.
+libraries are strongly encouraged for appreciable performance.
 
 ### Optional Dependencies
 
