docs: regenerate reference manual for v0.6.1

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.6.0`.
+Generated from LuaRadio `v0.6.1`.
 
 ## Table of contents
 
@@ -972,7 +972,7 @@ library.
     * `gain` (number in dB, overall gain, default 15.0 dB)
     * `bandwidth` (number in Hz)
     * `antenna` (string)
-    * `autogain` (bool)
+    * `autogain` (bool, default false)
     * `gains` (table, gain element name to value in dB)
 
 ###### Type Signatures
@@ -1169,7 +1169,7 @@ as it does not skip any samples, or it may otherwise throttle a flow graph.
 
 ``` lua
 -- Plot a 1 kHz cosine sampled at 250 kHz
-local snk = radio.SignalSource('cosine', 1e3, 250e3)
+local src = radio.SignalSource('cosine', 1e3, 250e3)
 local throttle = radio.ThrottleBlock()
 local snk = radio.GnuplotPlotSink(1000, 'Cosine')
 top:connect(src, throttle, snk)
@@ -1260,9 +1260,9 @@ with very low sample rates, or it may otherwise throttle a flow graph.
 
 ``` lua
 -- Plot the waterfall of a 1 kHz complex exponential sampled at 250 kHz
-local snk = radio.SignalSource('exponential', 1e3, 250e3)
+local src = radio.SignalSource('exponential', 1e3, 250e3)
 local throttle = radio.ThrottleBlock()
-local snk = radio.GnuplotSpectrumSink()
+local snk = radio.GnuplotWaterfallSink()
 top:connect(src, throttle, snk)
 ```
 
@@ -1301,7 +1301,7 @@ does not skip any samples, or it may otherwise throttle a flow graph.
 
 ``` lua
 -- Plot a 1 kHz complex exponential sampled at 250 kHz
-local snk = radio.SignalSource('exponential', 1e3, 250e3)
+local src = radio.SignalSource('exponential', 1e3, 250e3)
 local throttle = radio.ThrottleBlock()
 local snk = radio.GnuplotXYPlotSink(1000, 'Complex Exponential', {complex = true})
 top:connect(src, throttle, snk)
