docs: add macports install instructions to installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -1,7 +1,7 @@
 # Installation
 
-LuaRadio can be installed from the AUR on Arch Linux, from Homebrew on Mac OS
-X, or from source.
+LuaRadio can be installed from the Arch Linux AUR, macOS Homebrew, macOS
+MacPorts, or from source.
 
 Packaging for other distributions and platforms is a work in progress.
 
@@ -20,6 +20,14 @@ LuaRadio is available in [Homebrew](http://brew.sh/):
 
 ```
 brew install luaradio
+```
+
+## macOS MacPorts
+
+LuaRadio is available in [MacPorts](https://www.macports.org/):
+
+```
+sudo port install luaradio
 ```
 
 ## Source
