docs: separate packages and source sections in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -6,15 +6,15 @@ MacPorts, or from source.
 Packaging for other distributions and platforms is a work in progress.
 
 To try LuaRadio without installation, you can run it [directly from the
-repository](../README.md#quickstart), provided LuaJIT is installed. The
-real-time dependencies described [below](#real-time-dependencies) will also be
-necessary for real-time applications.
+repository](../README.md#quickstart), provided LuaJIT is installed.
 
-## Arch Linux AUR
+## Packages
+
+### Arch Linux AUR
 
 LuaRadio is available in the AUR: [`luaradio`](https://aur.archlinux.org/packages/luaradio)
 
-## macOS Homebrew
+### macOS Homebrew
 
 LuaRadio is available in [Homebrew](http://brew.sh/):
 
@@ -22,7 +22,7 @@ LuaRadio is available in [Homebrew](http://brew.sh/):
 brew install luaradio
 ```
 
-## macOS MacPorts
+### macOS MacPorts
 
 LuaRadio is available in [MacPorts](https://www.macports.org/):
 
@@ -30,7 +30,9 @@ LuaRadio is available in [MacPorts](https://www.macports.org/):
 sudo port install luaradio
 ```
 
-## Source
+## Building from Source
+
+### Prerequisites
 
 Install LuaJIT 2.0.4 or greater and prerequisites:
 
@@ -39,6 +41,8 @@ Install LuaJIT 2.0.4 or greater and prerequisites:
 * macOS/Darwin (MacPorts): `luajit`, `pkgconfig`
 * Ubuntu/Debian: `luajit`, `libluajit-5.1-dev`,`pkg-config`
 * Fedora, CentOS/RHEL/SL 7 or up: `luajit`, `luajit-devel`
+
+### Installation
 
 Build and install LuaRadio:
 
