docs: simplify homebrew package description in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -16,7 +16,7 @@ LuaRadio is available in the AUR: [`luaradio`](https://aur.archlinux.org/package
 
 ## macOS Homebrew
 
-LuaRadio is available in [Homebrew](http://brew.sh/) for macOS / Mac OS X:
+LuaRadio is available in [Homebrew](http://brew.sh/):
 
 ```
 brew install luaradio
