docs: simplify arch linux package description in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -12,8 +12,7 @@ necessary for real-time applications.
 
 ## Arch Linux AUR
 
-LuaRadio is available in the Arch Linux AUR under the package
-[`luaradio`](https://aur.archlinux.org/packages/luaradio).
+LuaRadio is available in the AUR: [`luaradio`](https://aur.archlinux.org/packages/luaradio)
 
 ## macOS Homebrew
 
