docs: improve dependency install instructions in installation guide
for the building from source section.

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -36,11 +36,11 @@ sudo port install luaradio
 
 Install LuaJIT 2.0.4 or greater and prerequisites:
 
-* Arch Linux: `luajit`
-* macOS (Homebrew): `luajit`, `pkg-config`
-* macOS/Darwin (MacPorts): `luajit`, `pkgconfig`
-* Ubuntu/Debian: `luajit`, `libluajit-5.1-dev`,`pkg-config`
-* Fedora, CentOS/RHEL/SL 7 or up: `luajit`, `luajit-devel`
+* Arch Linux: `sudo pacman -S luajit`
+* macOS (Homebrew): `brew install luajit pkg-config`
+* macOS (MacPorts): `sudo port install luajit pkgconfig`
+* Ubuntu/Debian/Rasbpian: `sudo apt-get install luajit libluajit-5.1-dev pkg-config`
+* Fedora/CentOS: `sudo yum install luajit luajit-devel`
 
 ### Installation
 
@@ -55,10 +55,16 @@ sudo make install
 
 ### Real-time Dependencies
 
-LuaRadio has no hard dependencies outside of LuaJIT, but for real-time
-applications, the [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
-[VOLK](https://github.com/gnuradio/volk), and [fftw](http://www.fftw.org/)
-libraries are strongly encouraged for appreciable performance.
+LuaRadio has no hard dependencies outside of LuaJIT, but is accelerated by the
+optional libraries [liquid-dsp](https://github.com/jgaeddert/liquid-dsp),
+[VOLK](http://libvolk.org/), and [fftw](http://www.fftw.org/). For best
+real-time performance, install these libraries:
+
+* Arch Linux: `sudo pacman -S liquid-dsp libvolk fftw`
+* macOS (Homebrew): `brew install liquid-dsp fftw`
+* macOS (MacPorts): `sudo port install liquid-dsp volk fftw-3`
+* Ubuntu/Debian/Raspbian: `sudo apt-get install libliquid-dev libvolk1-dev libfftw3-dev`
+* Fedora/CentOS: `sudo yum install liquid-dsp fftw`
 
 ### Optional Dependencies
 
