docs: update output for Float32 vector example in creating blocks

--- a/docs/3.creating-blocks.md
+++ b/docs/3.creating-blocks.md
@@ -298,9 +298,9 @@ local vec = radio.types.Float32.vector(4)
 -- Vector properties
 print(vec.length) --> 4, length of vector
 print(vec.size) --> 16, size of vector in bytes
-print(vec.data_type) --> ctype<struct 159>, C type of vector element
+print(vec.data_type) --> ctype<struct float32>, C type of vector element
 print(vec.data_type == radio.types.Float32) --> true
-print(ffi.typeof(vec.data)) --> ctype<struct 159 *>, C type of vector data
+print(ffi.typeof(vec.data)) --> ctype<struct float32 *>, C type of vector data
 
 -- Vector string representation
 print(vec) --> [Float32<value=0>, Float32<value=0>, Float32<value=0>, Float32<value=0>]
