--- a/docs/7.supported-hardware.md
+++ b/docs/7.supported-hardware.md
@@ -10,6 +10,7 @@ high speed interfaces.
 * [SoapySDR](https://github.com/pothosware/SoapySDR/wiki) with [`SoapySDRSource`](0.reference-manual.md#soapysdrsource) via [libSoapySDR](https://github.com/pothosware/SoapySDR)
 * [RTL-SDR](http://www.rtl-sdr.com/about-rtl-sdr/) with [`RtlSdrSource`](0.reference-manual.md#rtlsdrsource) via [librtlsdr](http://sdr.osmocom.org/trac/wiki/rtl-sdr)
 * [Airspy R2 and Mini](http://airspy.com/) with [`AirspySource`](0.reference-manual.md#airspysource) via [libairspy](https://github.com/airspy/airspyone_host)
+* [Airspy HF+ Dual Port and Discovery](http://airspy.com/) with [`AirspyHFSource`](0.reference-manual.md#airspyhfsource) via [libairspyhf](https://github.com/airspy/airspyhf)
 * [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSource`](0.reference-manual.md#hackrfsource) via [libhackrf](https://github.com/mossmann/hackrf)
 * [SDRplay RSP](http://sdrplay.com/) with [`SDRplaySource`](0.reference-manual.md#sdrplaysource) via [libmirsdrapi-rsp](https://www.sdrplay.com/downloads/)
 * [USRP](https://www.ettus.com/) with [`UHDSource`](0.reference-manual.md#uhdsource) via [libuhd](https://github.com/EttusResearch/uhd)
